--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 
 <body>
     <img src="assets/logo.svg" alt="Acts of Service" class="logo"/>
-    <p>A supper club based in Brunswick East. Website coming soon.</p>
+    <p><em>Acts of Service</em> is a supper club based in Brunswick East — that aims to <em>connect good people over good food</em>.</p>
+    <p class="alt">Website coming soon.</p>
 </body>
 
 </html>
